--- a/app/globals.css
+++ b/app/globals.css
@@ -124,3 +124,7 @@ pre {
 .active-tab {
   @apply bg-stroke text-black dark:bg-blackho dark:text-white;
 }
+
+.slide-customize .slick-track {
+  @apply flex items-center;
+}
